apps/unifi/helm/service_unifi-captiveportalservice.yaml
---
# Source: unifi/templates/captive-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-captiveportalservice
  labels:
    helm.sh/chart: unifi-1.12.3
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/version: v9.0.114
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8880
      targetPort: captive-http
      protocol: TCP
      name: captive-http
    - port: 8843
      targetPort: captive-https
      protocol: TCP
      name: captive-https
  selector:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi
