apps/unifi/helm/service_unifi-controller.yaml
---
# Source: unifi/templates/controller-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller
  labels:
    helm.sh/chart: unifi-1.12.3
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/version: v9.0.114
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: controller
      protocol: TCP
      name: controller
  selector:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi
