apps/unifi/helm/service_unifi-discovery.yaml
---
# Source: unifi/templates/discovery-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-discovery
  labels:
    helm.sh/chart: unifi-1.12.3
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/version: v9.0.114
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  ports:
    - port: 10001
      targetPort: discovery
      protocol: UDP
      name: discovery
  selector:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi
