apps/unifi/helm/service_unifi-gui.yaml
---
# Source: unifi/templates/gui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-gui
  labels:
    helm.sh/chart: unifi-1.12.3
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/version: v9.0.114
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: https-gui
      port: 8443
      protocol: TCP
      targetPort: https-gui
  selector:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi
