apps/unifi/helm/service_unifi-speedtest.yaml
---
# Source: unifi/templates/speedtest-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-speedtest
  labels:
    helm.sh/chart: unifi-1.12.3
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/version: v9.0.114
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 6789
      targetPort: speedtest
      protocol: TCP
      name: speedtest
  selector:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi
