apps/unifi/helm/service_unifi-syslog.yaml
---
# Source: unifi/templates/syslog-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-syslog
  labels:
    helm.sh/chart: unifi-1.12.3
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/version: v9.0.114
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  ports:
    - port: 5514
      targetPort: syslog
      protocol: UDP
      name: syslog
  selector:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi
